fix(CLS) : Reduce cumulative layout shift ⚡  (#755)
* fix(height for topbar)

--- a/app/isomorphic/components/layouts/header/top-bar/top-bar.m.css
+++ b/app/isomorphic/components/layouts/header/top-bar/top-bar.m.css
@@ -1,3 +1,4 @@
 .main-wrapper {
   position: relative;
+  height: 70px;
 }
